tests/paczka1/small_fuzzy/19020914.err
Error in line 1: a0YT9aC A979 58,8
Error in line 3: APz A259 32,9
Error in line 13: nLCoqP A259 68,1
